--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nx/nest": "^22.5.1"
+  },
   "devDependencies": {
     "@nx/js": "22.5.0",
     "@swc-node/register": "1.11.1",
