--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/microservices": "^11.1.14",
     "@nestjs/platform-express": "^11.0.0",
     "@nx/nest": "^22.5.1",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
