feat(shared): add shared library with account DTOs and entities
- Introduced shared library with account-related DTOs (CreateAccountDto, UpdateAccountDto) and entities (Account).
- Configured TypeORM for database interactions and added SQLite as a dependency.
- Set up Jest configuration for testing with SWC.
- Updated package.json to include shared library and necessary scripts.
- Added ESLint configuration for shared library.
- Created necessary TypeScript configuration files for the shared library.

--- a/nx.json
+++ b/nx.json
@@ -51,7 +51,7 @@
       "options": {
         "targetName": "test"
       },
-      "exclude": ["apps/gateway-e2e/**/*"]
+      "exclude": ["apps/gateway-e2e/**/*", "apps/accounts-e2e/**/*"]
     }
   ],
   "nxCloudId": "6994f51de96cc25401cd1052",
